--- a/ourteam.html
+++ b/ourteam.html
@@ -21,7 +21,7 @@
        }
        #card img:hover {
         transform: scale(1.08);
-        transition: all 500ms ease-in-out;
+        clip-path: circle();
        }
     @media (max-width: 768px) {
         #bg {
@@ -52,7 +52,7 @@
     <div class="container d-flex flex-wrap p-3 align-items-center justify-content-center">
         <!-- Background image -->
         <div
-        class="bg-image rounded" id="bg" style="background-image:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(hlelo.jpeg);
+        class="bg-image rounded" id="bg" style="background-image:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(our\ team.jpg);
         height: 90vh; width: 100%;">
         <div class="text-center text-light" id="bg-title">
         <h1 class="display-5 fw-bold">Our Team Members</h1>
@@ -61,7 +61,7 @@
     </div>
 
           <div class="card shadow-lg" id="card">
-            <img src="hello.jpeg" class="card-img-top rounded" style="height: 25%;"  alt="...">
+            <img src="miski.jpeg" class="card-img-top rounded" style="height: 25%;"  alt="...">
             <div class="card-body">
               <h5 class="card-title text-center fs-2">Miski Bihi Tahliil</h5>
               <p class="card-text text-center fs-2">ID :- C120848</p>
@@ -73,7 +73,7 @@
             </div>
     </div>
     <div class="card shadow-lg" id="card">
-      <img src="hello.jpeg" class="card-img-center rounded" style="height: 25%;"  alt="...">
+      <img src="mulki.jpeg" class="card-img-center rounded" style="height: 25%;"  alt="...">
       <div class="card-body">
         <h5 class="card-title text-center fs-2">Mulki Ahmed Ali</h5>
         <p class="card-text text-center fs-2">ID :- C120846</p>
@@ -85,7 +85,7 @@
       </div>
 </div>
 <div class="card shadow-lg" id="card">
-  <img src="hello.jpeg" class="card-img-top rounded" style="height: 25%;"  alt="...">
+  <img src="zahra.jpeg" class="card-img-top rounded" style="height: 25%;"  alt="...">
   <div class="card-body">
     <h5 class="card-title text-center fs-2">Sahro Mahad</h5>
     <p class="card-text text-center fs-2">ID :- C120145</p>
@@ -112,7 +112,7 @@
         <!-- Background image -->
 
     <div class="card shadow-lg"  id="card">
-        <img src="hello.jpeg" class="card-img-top rounded"  style="height: 10%;" alt="...">
+        <img src="cimraan.jpeg" class="card-img-top rounded"  style="height: 10%;" alt="...">
         <div class="card-body">
           <h5 class="card-title text-center fs-2">Imran Dahir</h5>
           <p class="card-text text-center fs-2">ID :- C120905</p>
@@ -124,7 +124,7 @@
         </div>
       </div>
     <div class="card shadow-lg" id="card">
-        <img src="hello.jpeg" class="card-img-top rounded" style="height: 25%;"  alt="...">
+        <img src="xamdi.jpeg" class="card-img-top rounded" style="height: 25%;"  alt="...">
         <div class="card-body">
           <h5 class="card-title text-center fs-2">Hamdi Elmi</h5>
           <p class="card-text text-center fs-2">ID :- C120231</p>
